--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	 <script src="js/Login.js" type="text/javascript"></script>    
     <script src="js/Utility.js" type="text/javascript"></script>
+	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+	
 </head>
 <body>
 	<div id="header">
@@ -34,6 +36,7 @@
 	</div>
 	<div id="adbox">
 		<div class="clearfix">
+		<form onsubmit="return false;">
 		<table align="right" class="tblLogin">
 		<tr>
 		<td class="tdLoginImage">
@@ -61,7 +64,7 @@
 		</td>
 		</tr>
 		</table>
-		
+		</form>
 			<!-- <div>
 				<h1>Ideas?</h1>
 				<h2>That's what we live for.</h2>
