--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>ZNOD Apps	</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>	
+     <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>	
 	 <script src="js/Login.js" type="text/javascript"></script>    
     <script src="js/Utility.js" type="text/javascript"></script>
-	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-	
 </head>
 <body>
 	<div id="header">
@@ -36,7 +36,7 @@
 	</div>
 	<div id="adbox">
 		<div class="clearfix">
-		<form onsubmit="return false;">
+		<form>
 		<table align="right" class="tblLogin">
 		<tr>
 		<td class="tdLoginImage">
