--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>News - Zerotype Website Template</title>
+	<title>News - ZNOD Apps</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -38,16 +38,28 @@
 				<li>
 					<div class="date">
 						<p>
-							<span>03</span>
-							2023
+							<span>06</span>
+							2014
 						</p>
 					</div>
-					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
+					<h2>Updates: More Features Released <span>Senthil</span></h2>
 					<p>
-						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
+						More features are added in the Z-Inv application like Annexure Report download with excel format and now you can get the chart report for your business analysis. <span><a href="#" class="more">Read More</a></span>
 					</p>
 				</li>
 				<li>
+					<div class="date">
+						<p>
+							<span>06</span>
+							2014
+						</p>
+					</div>
+					<h2>Updates: Comming soon <span>Tamilselvan Mariappan</span></h2>
+					<p>
+					“Our GeoTrack application allows you to track any movable or unmovable objects on 24X7 basis. Unlike other tracking applications GeoTrack is highly customizable to suit your own business needs.”. <span><a href="#" class="more">Read More</a></span>
+					</p>
+				</li>
+			<!-- 	<li>
 					<div class="date">
 						<p>
 							<span>03</span>
@@ -58,31 +70,19 @@
 					<p>
 						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
 					</p>
-				</li>
-				<li>
-					<div class="date">
-						<p>
-							<span>03</span>
-							2023
-						</p>
-					</div>
-					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
-					<p>
-						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
-					</p>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		<div class="sidebar">
 			<h1>Popular Posts</h1>
 			<ul class="posts">
 				<li>
-					<h4 class="title"><a href="post.html">Making It Work</a></h4>
+					<h4 class="title"><a href="#">Mobile Application</a></h4>
 					<p>
-						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+						You will soon get our all application on your mobile. It allows you to handle your business with portable any where any time you can access.
 					</p>
 				</li>
-				<li>
+			<!-- 	<li>
 					<h4 class="title"><a href="post.html">Designs and Concepts</a></h4>
 					<p>
 						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
@@ -93,7 +93,7 @@
 					<p>
 						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
 					</p>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</div>
