--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>About - Zerotype Website Template</title>
+	<title>About - ZNOD Apps</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -33,25 +33,13 @@
 	</div>
 	<div id="contents">
 		<div id="about">
-			<h1>About</h1>
-			<h2>We Have Free Templates for Everyone</h2>
-			<p>
-				Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What's more, they're absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms/">Terms of Use</a>. You can even remove all our links if you want to.
-			</p>
-			<h2>We Have More Templates for You</h2>
-			<p>
-				Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> and find what you're looking for. But if you don't find any website template you can use, you can try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. Maybe you're looking for something different, something special. And we love the challenge of doing something different and something special.
-			</p>
-			<h2>Be Part of Our Community</h2>
-			<p>
-				If you're experiencing issues and concerns about this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests with you.
-			</p>
-			<h2>Template details</h2>
-			<p>
-				Design version 9<br> Code version 3<br> Website Template details, discussion and updates for this <a href="http://www.freewebsitetemplates.com/discuss/zerotype/">Zerotype Website Template</a>.<br> Website Template design by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>.<br> Please feel free to remove some or all the text and links of this page and replace it with your own About content.
-			</p>
-		</div>
+            <h1>About Us</h1>
+           <h1>Our Mission</h1> 
+            Started with one goal in our mind, "IT doesn't need to be expensive". Bunch of nerds sat together and start talking about how we can better use our skills to provide cheaper solutions to the people who cannot afford today's IT.
+
+            We use open source technologies as our primary development model which allows us to deliver the solutions at low cost. We have talented people who can transform your business needs to reality.
 	</div>
+        </div>
 	<div id="footer">
 		<div class="clearfix">
 			<div id="connect">
