--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Contact - Zerotype Website Template</title>
+	<title>Contact - ZNOD Apps</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
