--- a/products.html
+++ b/products.html
@@ -34,18 +34,12 @@
 	<div id="contents">
 		<div class="features">
 			<h1>Products</h1>
-			<p>
-				Change, add, and remove items as you like. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.
-			</p>
+			
 			<div>
-				<img src="images/recycle.png" alt="Img">
-				<h2>Customizable and Easy</h2>
+				<img src="images/z-finlogo.png" alt="Img">
+				<h2>Z-Fin</h2>
 				<p>
-					You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website!
-				</p>
-				<h2>Online in an Instant</h2>
-				<p>
-					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor.
+				“Z-Fin system allows managing financial transactions in a retail company and providing detail reports to the management team which will help them to take key decisions.”
 				</p>
 			</div>
 			
