--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ZNOD Apps	</title>
+    <link id="Link1" rel="shortcut icon" href="images/znodico.ico" type="image/x-icon" />
+    <link id="Link2" rel="icon" href="images/znodico.ico" type="image/ico" />
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>	
      <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>	
