--- a/news.html
+++ b/news.html
@@ -1,9 +1,11 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>News - ZNOD Apps</title>
+    <link id="Link1" rel="shortcut icon" href="images/znodico.ico" type="image/x-icon" />
+    <link id="Link2" rel="icon" href="images/znodico.ico" type="image/ico" />
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
