--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div id="contents">
-		<div class="section">
+		<!-- <div class="section"> -->
 			<h1>Contact</h1>
 			<p>
 			Znod Technologies Pvt Ltd. <br/>
@@ -50,7 +50,7 @@ Phone : 044 6551 2244</p>
 				<textarea></textarea>
 				<input type="submit" value="Send"/>
 			</form> -->
-		</div>
+	<!-- 	</div> -->
 		
 	</div>
 	<div id="footer">
