Spelling correction changed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</tr>
 		<tr>
 		<td>
-		<a href="#" class="aTrble"><span>Trouble sing in your account?</span></a>
+		<a href="#" class="aTrble"><span>Trouble sign in your account?</span></a>
 		</td>
 		</tr>
 		</table>
@@ -83,7 +83,7 @@
 				<a href="https://www.facebook.com/pages/Znod-Technologies/262398003917648" target="_blank" class="facebook"></a><a href="#"  class="googleplus"></a><a href="#" class="twitter"></a><a href="#" class="tumbler"></a>
 			</div>
 			<p>
-				© 2014 ZNOD Technologies Pvt. Ltd. All Rights Reserved.
+				© 2014 Znod Technologies Pvt. Ltd. All Rights Reserved.
 			</p>
 		</div>
 	</div>
