--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ Phone : 044 6551 2244</p>
 				<a href="https://www.facebook.com/pages/Znod-Technologies/262398003917648" target="_blank" class="facebook"></a><a href="#"  class="googleplus"></a><a href="#" class="twitter"></a><a href="#" class="tumbler"></a>
 			</div>
 			<p>
-				© 2014 ZNOD Technologies Pvt. Ltd. All Rights Reserved.
+				© 2014 Znod Technologies Pvt. Ltd. All Rights Reserved.
 			</p>
 		</div>
 	</div>
