--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>About - ZNOD Apps</title>
+	<title>About - Toverto Apps</title>
     <link id="Link1" rel="shortcut icon" href="images/znodico.ico" type="image/x-icon" />
     <link id="Link2" rel="icon" href="images/znodico.ico" type="image/ico" />
 	<link rel="stylesheet" href="css/style.css" type="text/css">
